# sglang

./: SGLang_Router_PD_学习指南.md
sgl-model-gateway/smg/: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  mkdocs.yml  pytest.ini  rustfmt.toml
sgl-model-gateway/smg/.cargo/: config.toml
sgl-model-gateway/smg/.github/: CODEOWNERS  labeler.yml
sgl-model-gateway/smg/.github/workflows/: benchmark-manual-policy.yml  benchmark-radix-tree.yml  benchmark-request-processing.yml  benchmark-tokenizer.yml  benchmark-tool-parser.yml  docs.yml  labeler.yml  pr-test-rust.yml  release-auth.yml  release-data-connector.yml  release-kv-index.yml  release-llm-multimodal.yml  release-llm-tokenizer.yml  release-openai-protocol.yml  release-pypi.yml  release-reasoning-parser.yml  release-smg-grpc-client.yml  release-smg-mcp.yml  release-smg-mesh.yml  release-smg-wasm.yml  release-tool-parser.yml  release-wfaas.yml
sgl-model-gateway/smg/auth/: Cargo.toml
sgl-model-gateway/smg/auth/src/: audit.rs  config.rs  jwks.rs  jwt.rs  lib.rs  middleware.rs
sgl-model-gateway/smg/bindings/golang/: .gitignore  Cargo.toml  Makefile  README.md  client.go  client_test.go  go.sum  integration_test.go
sgl-model-gateway/smg/bindings/python/: .coveragerc  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py
sgl-model-gateway/smg/data_connector/: Cargo.toml
sgl-model-gateway/smg/data_connector/src/: common.rs  config.rs  core.rs  factory.rs  lib.rs  memory.rs  noop.rs  oracle.rs  postgres.rs  redis.rs
sgl-model-gateway/smg/docker/: Dockerfile
sgl-model-gateway/smg/docs/: index.md
sgl-model-gateway/smg/docs/concepts/: index.md
sgl-model-gateway/smg/docs/configuration/: authentication.md  grpc-pipeline.md  high-availability.md  index.md  mcp.md  resilience.md  routing.md  storage.md  tokenization.md  wasm-plugins.md
sgl-model-gateway/smg/docs/contributing/: code-style.md  development.md  index.md
sgl-model-gateway/smg/docs/getting-started/: index.md  installation.md  quickstart.md
sgl-model-gateway/smg/docs/includes/: abbreviations.md
sgl-model-gateway/smg/docs/overrides/: main.html
sgl-model-gateway/smg/docs/reference/: configuration.md  index.md  metrics.md
sgl-model-gateway/smg/docs/tasks/: index.md
sgl-model-gateway/smg/docs/tutorials/: getting-started.md  index.md  production.md
sgl-model-gateway/smg/e2e_test/: __init__.py  conftest.py  pyproject.toml
sgl-model-gateway/smg/e2e_test/benchmarks/: conftest.py  results.py  summarize.py  test_pd_perf.py  test_regular_perf.py
sgl-model-gateway/smg/e2e_test/chat_completions/: test_enable_thinking.py  test_function_calling.py  test_openai_server.py  test_reasoning_content.py  test_validation.py
sgl-model-gateway/smg/e2e_test/embeddings/: test_basic.py  test_correctness.py
sgl-model-gateway/smg/e2e_test/fixtures/: __init__.py  hooks.py  markers.py  pool.py  ports.py  setup_backend.py
sgl-model-gateway/smg/e2e_test/infra/: __init__.py  constants.py  gateway.py  gpu_allocator.py  gpu_monitor.py  model_pool.py  model_specs.py  process_utils.py  run_eval.py  simple_eval_common.py  simple_eval_mmlu.py
sgl-model-gateway/smg/e2e_test/responses/: __init__.py  test_basic_crud.py  test_state_management.py  test_streaming_events.py  test_structured_output.py  test_tools_call.py
sgl-model-gateway/smg/e2e_test/router/: test_mmlu.py  test_pd_mmlu.py  test_worker_api.py
sgl-model-gateway/smg/examples/wasm/: .gitignore  README.md
sgl-model-gateway/smg/grpc_client/: Cargo.toml  build.rs
sgl-model-gateway/smg/grpc_client/proto/: sglang_scheduler.proto  vllm_engine.proto
sgl-model-gateway/smg/grpc_client/src/: lib.rs  sglang_scheduler.rs  vllm_engine.rs
sgl-model-gateway/smg/kv_index/: Cargo.toml
sgl-model-gateway/smg/kv_index/src/: common.rs  lib.rs  string_tree.rs  token_tree.rs
sgl-model-gateway/smg/mcp/: Cargo.toml
sgl-model-gateway/smg/mcp/src/: config.rs  connection_pool.rs  error.rs  inventory.rs  lib.rs  manager.rs  oauth.rs  proxy.rs  tool_args.rs
sgl-model-gateway/smg/mesh/: Cargo.toml  build.rs
sgl-model-gateway/smg/mesh/src/: README.md  consistent_hash.rs  controller.rs  crdt.rs  flow_control.rs  incremental.rs  lib.rs  metrics.rs  mtls.rs  node_state_machine.rs  partition.rs  ping_server.rs  rate_limit_window.rs  service.rs  stores.rs  sync.rs  test_utils.rs  topology.rs  tree_ops.rs
sgl-model-gateway/smg/model_gateway/: Cargo.toml  build.rs
sgl-model-gateway/smg/model_gateway/benches/: manual_policy_benchmark.rs  radix_tree_benchmark.rs  request_processing.rs  router_registry_bench.rs  tokenizer_benchmark.rs  tool_parser_benchmark.rs  wasm_middleware_latency.rs
sgl-model-gateway/smg/model_gateway/src/: app_context.rs  lib.rs  main.rs  middleware.rs  server.rs  service_discovery.rs  version.rs
sgl-model-gateway/smg/model_gateway/tests/: api_tests.rs  inflight_tracker_test.rs  load_guard_raii_test.rs  mcp_test.rs  mesh_integration_test.rs  metrics_aggregator_test.rs  otel_tracing_test.rs  reliability_tests.rs  routing_tests.rs  security_tests.rs  spec_test.rs  wasm_test.rs
sgl-model-gateway/smg/multimodal/: Cargo.toml
sgl-model-gateway/smg/multimodal/scripts/: generate_vision_golden.py
sgl-model-gateway/smg/multimodal/src/: error.rs  lib.rs  media.rs  registry.rs  tracker.rs  types.rs
sgl-model-gateway/smg/multimodal/tests/: multimodal_tracker_test.rs  vision_golden_tests.rs
sgl-model-gateway/smg/protocols/: Cargo.toml
sgl-model-gateway/smg/protocols/src/: chat.rs  classify.rs  common.rs  completion.rs  embedding.rs  event_types.rs  generate.rs  lib.rs  messages.rs  parser.rs  rerank.rs  responses.rs  sampling_params.rs  tokenize.rs  validated.rs  worker_spec.rs
sgl-model-gateway/smg/reasoning_parser/: Cargo.toml
sgl-model-gateway/smg/scripts/: ci_install_rust.sh  ci_killall_sglang.sh  generate_gateway_release_notes.sh  run_benchmarks.py  setup-sccache.sh
sgl-model-gateway/smg/tokenizer/: Cargo.toml  README.md
sgl-model-gateway/smg/tool_parser/: Cargo.toml
sgl-model-gateway/smg/wasm/: Cargo.toml  README.md
sgl-model-gateway/smg/workflow/: Cargo.toml
(+410 files in other folders)
