[package]
name = "smg-grpc-client"
version = "1.0.0"
edition = "2021"
description = "gRPC clients for SGLang and vLLM backends"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
]
keywords = ["grpc", "sglang", "vllm", "llm"]
categories = ["api-bindings"]

[lib]
name = "smg_grpc_client"

[dependencies]
# Workspace dependencies
openai-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# gRPC dependencies
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

# Async/concurrency
futures.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
