[package]
name = "kv-index"
version = "1.0.0"
edition = "2021"
description = "Radix tree implementations for prefix matching and cache-aware routing"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
    "Keyang Ru <rukeyang@gmail.com>",
]
keywords = ["radix-tree", "prefix-matching", "cache-routing", "llm"]
categories = ["data-structures", "caching"]

[dependencies]
dashmap = { workspace = true }
once_cell = "1.21.3"
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { workspace = true }
