[package]
name = "smg-mcp"
version = "1.0.0"
edition = "2021"
description = "Model Context Protocol (MCP) client implementation"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
    "Keyang Ru <rukeyang@gmail.com>",
]
keywords = ["mcp", "smg", "llm", "tools"]
categories = ["api-bindings"]

[lib]
name = "smg_mcp"

[dependencies]
openai-protocol.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff = { version = "0.4", features = ["tokio", "futures"] }
dashmap.workspace = true
lru.workspace = true
parking_lot.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing.workspace = true
url = "2.5"
rmcp = { version = "0.8.3", features = ["client", "server",
    "transport-child-process",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "reqwest",
    "auth"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
