[package]
name = "tool-parser"
version = "1.0.0"
edition = "2021"
description = "Tool/function call parser for LLM model outputs"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
]
keywords = ["llm", "tool-calling", "function-calling", "parser"]
categories = ["parsing", "api-bindings"]

[dependencies]
openai-protocol.workspace = true
async-trait.workspace = true
num-traits.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
tracing.workspace = true
# Only used by tool-parser
regex = "1.10"
rustpython-parser = "0.4.0"
