[package]
name = "wfaas"
version = "1.0.0"
edition = "2021"
description = "Workflow-as-a-Service engine for managing multi-step operations"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
    "Keyang Ru <rukeyang@gmail.com>",
]
keywords = ["workflow", "orchestration", "dag", "state-machine"]
categories = ["asynchronous"]

[lib]
name = "wfaas"

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
# Only used by workflow
backoff = "0.4"
